--- a/index.html
+++ b/index.html
@@ -1,46 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<title>Ejemplo Z-index</title>
-<link rel="stylesheet" href="css/escaleraColores.css" type="text/css" media="all" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guía 3 </title>
+    <link rel="stylesheet" href="css/styleIndex.css">
 </head>
 <body>
-<h1>Resultado 1: Usando posicionamiento y z-index</h1>
-<div id="diez_de_diamantes">
-<img src="img/diamonds_10.gif" alt="diez de diamantes">
-</div>
-<div id="sota_de_diamantes">
-<img src="img/diamonds_jack.gif" alt="sota de diamantes">
-</div>
-<div id="reina_de_diamantes">
-<img src="img/diamonds_queen.gif" alt="reina de diamantes">
-</div>
-<div id="rey_de_diamantes">
-<img src="img/diamonds_king.gif" alt="rey de diamantes">
-</div>
-<div id="as_de_diamantes">
-<img src="img/diamonds_ace.gif" alt="as de diamantes">
-</div>
-
-<hr>
-
-<h1>Resultado 2: Usando posicionamiento y z-index</h1>
-<div id="diez_de_diamantes2">
-<img src="img/diamonds_10.gif" alt="diez de diamantes">
-</div>
-<div id="sota_de_diamantes2">
-<img src="img/diamonds_jack.gif" alt="sota de diamantes">
-</div>
-<div id="reina_de_diamantes2">
-<img src="img/diamonds_queen.gif" alt="reina de diamantes">
-</div>
-<div id="rey_de_diamantes2">
-<img src="img/diamonds_king.gif" alt="rey de diamantes">
-</div>
-<div id="as_de_diamantes2">
-<img src="img/diamonds_ace.gif" alt="as de diamantes">
-</div>
+    <header>
+        <h1>Guía 3 - Ejercicios</h1>
+        <p class="descripcion">Desarrollo de la Guía 3.</p>
+    </header>
+    <main>
+        <section class="ejemplos">
+            <h2> Ejercicios guia HTML</h2>
+            <div class="listado-container">
+                <div class="listado-ejemplos">
+                    <h3>Ejemplos de HTML</h3>
+                    <ul>
+                        <li><a href="oscares.html">Ejercicio 1 y Complementario 2 - Oscares</a></li>
+                        <li><a href="menu_horizontal.html">Ejercicio 2 - Menú horizontal</a></li>
+                        <li><a href="indexViajes.html">Ejercicio 3 y complementario 3 - Index (Viajes)</a></li>
+                        <li><a href="planes.html">Ejercicio 3 - Planes</a></li>
+                        <li><a href="galeria.html">Ejercicio 3 - Galeria</a></li>
+                        <li><a href="analisis.html">Complementario 1 - Cartas</a></li>
+                    </ul>
+                </div>
+               
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p> Jorge Flores </p>
+    </footer>
 </body>
 </html>
-	
-	
